# rust-learn

./: .gitignore
csv_ex/: Cargo.toml
csv_ex/src/: csv_test.csv  main.rs
custom_error/: Cargo.toml
custom_error/src/: main.rs
myerror/: Cargo.toml
myerror/src/: errors.rs  main.rs
myiterator/: Cargo.toml
myiterator/src/: main.rs
mymacro/: Cargo.toml
mymacro/src/: main.rs
normal/: Cargo.toml
normal/src/: main.rs
operator-add/: Cargo.toml
operator-add/src/: main.rs
simple_redis/: Cargo.toml
simple_redis/src/: main.rs
simple_redis/src/redis/: cmd.rs  db.rs  mod.rs  reply.rs
simple_redis/src/server/: mod.rs  socket_client.rs  socket_server.rs
start-trait/: Cargo.toml
start-trait/src/: main.rs
tls-tcp-quic/: Cargo.toml
tls-tcp-quic/loadca/: Cargo.toml
tls-tcp-quic/loadca/ca/: cert.pem  gen.sh  key.pem  openssl.cnf
tls-tcp-quic/loadca/src/: lib.rs
tls-tcp-quic/quic-tls/: Cargo.toml
tls-tcp-quic/quic-tls/src/: client.rs  server.rs
tls-tcp-quic/tcp-tls/: Cargo.toml
tls-tcp-quic/tcp-tls/src/: client.rs  server.rs
warp_sqlx/: Cargo.toml
warp_sqlx/sql/: table.sql
warp_sqlx/src/: db.rs  main.rs
warp_sqlx/src/model/: user.rs
warp_sqlx/src/web/: filter.rs  mod.rs  route.rs  user.rs
workspace-demo/: Cargo.toml
workspace-demo/exec/: Cargo.toml
workspace-demo/exec/src/: main.rs
workspace-demo/reader/: Cargo.toml
workspace-demo/writer/: Cargo.toml
