[package]
name = "warp_sqlx"
version = "0.1.0"
edition = "2024"

[dependencies]
http = "1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
log = "0.4"
pretty_env_logger = "0.5"
serde = "1"
serde_json = "1"
serde_with = { version = "3", features = ["chrono"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
