[package]
name = "quic-tls"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
rustls = "0.23"
tokio-rustls = "0.26"
rcgen = "0.13"
anyhow = "1.0"
quinn = "0.11"

loadca = { path = "../loadca" }
